# network_exp_otree

./: .gitignore  hello.py  pyproject.toml  settings.py
_static/check_test/: desktop.ini
_static/network_pd/: decision_btn.js  display_payoff.js  next_btn.js  reload.js  timer.css  timer.js
_static/network_pd_live/: decision_btn.js  next_btn.js  plot_network.js  websocket.js
analysis/: check_temp_data.py  highest_action_cases.html  highest_action_cases.ipynb  temp_check.ipynb
consent/: Consent.html  __init__.py
experiment_introduction/: CheckTest.html  Introduction.html  __init__.py
network_pd/: Decision.html  MyWaitPage.html  Results copy.html  Results.html  __init__.py  func_test.py  tests.py
network_pd_live/: Decision.html  __init__.py  live_funcs.py
prempexp/: __init__.py
public_goods_simple/: Results.html
todos/network_pd/: livepageに移行する.md  payoffを表示させる.md  入室してから開始する.md  大タスク.md  抜ける人対策.md
work/: DecisionFirst.html  DecisionSecond.html  FinalPage.html  Intro1.html  Intro2.html  Results.html  models.py  pages.py  tests.py
