[project]
name = "rand-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.2.2",
    "dtale>=3.17.0",
    "ipykernel>=6.29.5",
    "kaleido==0.2.1",
    "matplotlib>=3.10.3",
    "otree>=5.11.2",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
]
